<resources>
    <string name="app_name">巡检系统</string>
    <string name="test">测试文字</string>
    <string name="title">智惠管家巡检系统</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="phone">请输入手机号</string>
    <string name="login">登录</string>
    <string name="code_login">扫码登录</string>
    <string name="jiqi_login">机器码登录</string>
    <string name="query">查询</string>
    <string name="back">退出</string>
    <string name="setting">设置</string>
    <string name="ok">确定</string>
    <string name="ok_submit">提交</string>
    <string name="cancal">取消</string>
    <string name="input_quan">输入兑换券</string>
    <string name="input_ma">输入机器码</string>
    <string name="input_plese">请输入机器码</string>
    <string name="Zuling_book">归还</string>
    <string name="no_data">暂无数据</string>
    <string name="input_zuling">输入商品名称</string>
    <string name="input_zuling_plese">请输入商品名称</string>
    <string name="input_bring">输入书籍名称</string>
    <string name="input_bring_plese">请输入书籍名称</string>

    <string name="input_bring_zuling">确定归还该商品？</string>
    <string name="input_bring_zuling1">确定是否租赁该商品？</string>
    <string name="input_bring_bring">确定归还该书籍？</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">请先扫描客户信息</string>
    <string name="fragment_point_num">请输入应扣积分</string>
    <string name="point">积分抵用</string>
    <string name="quan">消费抵用券</string>
    <string name="zuling">便民租赁</string>
    <string name="bring">借/还书</string>
    <string name="xuanjian">已巡检</string>
    <string name="recorder_normal">按住 说话</string>
    <string name="recorder_recording">松开 结束</string>
    <string name="recorder_want_cancel">松开手指，取消发送</string>

    <string name="dialog_recording">手指上滑 取消发送</string>
    <string name="dialog_cancel">手指松开 取消发送</string>
    <string name="dialog_too_short">录音时间过短!</string>
</resources>
