<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:src="@drawable/close"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/close"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/test"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingRight="5dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tv_i_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white_color"
            android:textSize="15sp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_bg"
            android:text="@string/ok"/>
        <EditText
            android:id="@+id/duihauma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="13sp"
            android:visibility="gone"
            android:inputType="text"
            android:hint="@string/input_ma"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:background="@color/text_color"
            ></View>
    </LinearLayout>

</LinearLayout>