<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"     >
    <!-- TODO: Update blank fragment layout -->

    <FrameLayout
        android:id="@+id/ll_list_public"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/text_white_color"
            app:srlDragRate="0.8">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data"
            android:textSize="20sp"
            android:visibility="gone"></TextView>

        <LinearLayout
            android:id="@+id/ll_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:background="@color/text_bg_color"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_bottom_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test"
                android:textColor="@color/text_white_color"
                android:textSize="16sp" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_point"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/tv_point_num"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/fragment_point_num"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/text_white_color"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="333dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_color"></View>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LL_list_point"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/choise_time_bg"
                android:gravity="center"
                android:hint="请选择开始时间"
                android:textColor="@color/text_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:hint="—" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/choise_time_bg"
                android:gravity="center"
                android:hint="请选择结束时间"
                android:textColor="@color/text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_choise"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/text_white_color"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/text_color"></View>

        <TextView
            android:id="@+id/totle_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/test"
            android:textColor="@color/title_color"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_list_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_no_data1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data"
            android:textSize="20sp"
            android:visibility="gone"></TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_no_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wring" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/hello_blank_fragment"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
