<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.zhhome.zhhomeclient.activity.ListServerActivity">
    <LinearLayout
        android:id="@+id/ll_no_login"
        android:layout_width="match_parent"
        android:background="@drawable/head_bg"
        android:layout_height="150dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/text_bg_line"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_margin="20dp">
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="20sp"
                android:inputType="phone"
                android:hint="@string/phone"/>
            <TextView
                android:id="@+id/tv_query"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@drawable/text_bg"
                android:text="@string/query"
                android:textColor="@color/text_white_color"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_code"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/code_bg"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_is_login"
        android:layout_width="match_parent"
        android:background="@drawable/head_bg"
        android:padding="20dp"
        android:visibility="gone"
        android:layout_height="200dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/title_color"
                    android:text="@string/test" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/tv_total_point"
                    android:layout_width="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_bg_crop"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:text="@string/test"/>
                <TextView
                    android:id="@+id/tv_use_point"
                    android:layout_width="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/text_bg_crop"
                    android:gravity="center"
                    android:text="@string/test"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/tv_mobile"
                    android:layout_width="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/mobile"
                    android:drawablePadding="5dp"
                    android:text="@string/test"/>
                <TextView
                    android:id="@+id/tv_id_code"
                    android:layout_width="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:visibility="gone"
                    android:drawableLeft="@drawable/img_idcode"
                    android:drawablePadding="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/test"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_back"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:textColor="@color/text_white_color"
                android:text="@string/back"
                android:background="@drawable/back_bg"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/tl"
        android:layout_below="@+id/party_build_banner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:tabIndicatorColor="@color/text_bg_color"
        app:tabTextColor="@color/text_color"
        app:tabSelectedTextColor="@color/title_color"
        app:tabTextAppearance="@style/tablayout_style_bold"
        />


    <android.support.v4.view.ViewPager
        android:id="@+id/vp"
        android:layout_below="@+id/tl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>
</LinearLayout>
