<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangePassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/text_white_color"
        >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:drawableLeft="@drawable/jf_back"
            android:drawablePadding="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/setting"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/white">
        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/defalt_hed"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_color"
                android:textSize="28sp"
                android:text="@string/xuanjian"/>
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:text="@string/xuanjian"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/white"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="原密码"
                android:textColor="@color/title_color"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/old_password"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:hint="请输入原密码"
                android:textColor="@color/text_color"
                android:background="@null"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="新密码"
                android:textColor="@color/title_color"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/new_password"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textColor="@color/text_color"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:hint="请输入新密码"
                android:background="@null"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/title_color"
                android:text="重复新密码"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/new_ag_password"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:hint="请再次输入新密码"
                android:inputType="textPassword"
                android:background="@null"
                android:textColor="@color/text_color"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/chang_sub"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/text_bg"
        android:text="@string/ok_submit"
        android:layout_margin="20dp"
        android:textColor="@color/text_white_color"
        android:textSize="20sp" />

</LinearLayout>